--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="container">
   <h1>{{ appTitle}}</h1>
-  <app-todos [todos]="todos"></app-todos>
+  <app-todos
+    [todos]="todos"
+    (onToggle)="onToggle($event)"
+  ></app-todos>
 </div>
