--- a/src/app/todo-form/todo-form.component.html
+++ b/src/app/todo-form/todo-form.component.html
@@ -1,3 +1,9 @@
-<p>
-  todo-form works!
-</p>
+<div>
+  <input
+    type="text"
+    placeholder="Add todo title..."
+    [(ngModel)]="title"
+    (keydown.enter)="addTodo()"
+  >
+  <button (click)="addTodo()">Add todo</button>
+</div>
